Updated AddBookServlet and RemoveBookServlet; improved login handling