@@ -19,9 +19,11 @@ import com.bittercode.service.impl.BookServiceImpl;
 import com.bittercode.util.StoreUtil;
 
 public class AddBookServlet extends HttpServlet {
+    private static final long serialVersionUID = 1L;
     BookService bookService = new BookServiceImpl();
 
-    public void service(HttpServletRequest req, HttpServletResponse res) throws IOException, ServletException {
+    @Override
+    protected void doPost(HttpServletRequest req, HttpServletResponse res) throws IOException, ServletException {
         PrintWriter pw = res.getWriter();
         res.setContentType(BookStoreConstants.CONTENT_TYPE_TEXT_HTML);
 
@@ -37,52 +39,48 @@ public class AddBookServlet extends HttpServlet {
         rd.include(req, res);
         StoreUtil.setActiveTab(pw, "addbook");
         pw.println("<div class='container my-2'>");
-        if(bName == null || bName.isBlank()) {
-            //render the add book form;
+
+        if (bName == null || bName.trim().isEmpty()) { // Use trim() for better handling of blank spaces
             showAddBookForm(pw);
             return;
-        } //else process the add book
-        
- 
+        }
+
         try {
             String uniqueID = UUID.randomUUID().toString();
             String bCode = uniqueID;
             String bAuthor = req.getParameter(BooksDBConstants.COLUMN_AUTHOR);
-            double bPrice = Integer.parseInt(req.getParameter(BooksDBConstants.COLUMN_PRICE));
+            double bPrice = Double.parseDouble(req.getParameter(BooksDBConstants.COLUMN_PRICE));
             int bQty = Integer.parseInt(req.getParameter(BooksDBConstants.COLUMN_QUANTITY));
 
             Book book = new Book(bCode, bName, bAuthor, bPrice, bQty);
             String message = bookService.addBook(book);
+
             if ("SUCCESS".equalsIgnoreCase(message)) {
-                pw.println(
-                        "<table class=\"tab\"><tr><td>Book Detail Updated Successfully!<br/>Add More Books</td></tr></table>");
+                pw.println("<table class=\"tab\"><tr><td>Book Detail Updated Successfully!<br/>Add More Books</td></tr></table>");
             } else {
-                pw.println("<table class=\"tab\"><tr><td>Failed to Add Books! Fill up CareFully</td></tr></table>");
-                //rd.include(req, res);
+                pw.println("<table class=\"tab\"><tr><td>Failed to Add Books! Fill up Carefully</td></tr></table>");
             }
+        } catch (NumberFormatException e) {
+            pw.println("<table class=\"tab\"><tr><td>Invalid number format. Please check your input.</td></tr></table>");
         } catch (Exception e) {
-            e.printStackTrace();
-            pw.println("<table class=\"tab\"><tr><td>Failed to Add Books! Fill up CareFully</td></tr></table>");
+            e.printStackTrace(); // Optionally log this to a logging framework
+            pw.println("<table class=\"tab\"><tr><td>Failed to Add Books! Please try again later.</td></tr></table>");
         }
     }
-    
+
     private static void showAddBookForm(PrintWriter pw) {
         String form = "<table class=\"tab my-5\" style=\"width:40%;\">\r\n"
                 + "        <tr>\r\n"
                 + "            <td>\r\n"
                 + "                <form action=\"addbook\" method=\"post\">\r\n"
-                + "                    <!-- <label for=\"bookCode\">Book Code : </label><input type=\"text\" name=\"barcode\" id=\"bookCode\" placeholder=\"Enter Book Code\" required><br/> -->\r\n"
                 + "                    <label for=\"bookName\">Book Name : </label> <input type=\"text\" name=\"name\" id=\"bookName\" placeholder=\"Enter Book's name\" required><br/>\r\n"
                 + "                    <label for=\"bookAuthor\">Book Author : </label><input type=\"text\" name=\"author\" id=\"bookAuthor\" placeholder=\"Enter Author's Name\" required><br/>\r\n"
-                + "                    <label for=\"bookPrice\">Book Price : </label><input type=\"number\" name=\"price\" placeholder=\"Enter the Price\" required><br/>\r\n"
+                + "                    <label for=\"bookPrice\">Book Price : </label><input type=\"number\" name=\"price\" placeholder=\"Enter the Price\" required step=\"0.01\"><br/>\r\n" // Added step for decimal support
                 + "                    <label for=\"bookQuantity\">Book Qnty : </label><input type=\"number\" name=\"quantity\" id=\"bookQuantity\" placeholder=\"Enter the quantity\" required><br/>\r\n"
-                + "                    <input class=\"btn btn-success my-2\" type=\"submit\" value=\" Add Book \">\r\n"
+                + "                    <input class=\"btn btn-success my-2\" type=\"submit\" value=\"Add Book\">\r\n"
                 + "                </form>\r\n"
                 + "            </td>\r\n"
-                + "        </tr>  \r\n"
-                + "        <!-- <tr>\r\n"
-                + "            <td><a href=\"index.html\">Go Back To Home Page</a></td>\r\n"
-                + "        </tr> -->\r\n"
+                + "        </tr>\r\n"
                 + "    </table>";
         pw.println(form);
     }
